--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ img {
 header {
     width: 100%;
     background-color:rgb(255 105 0) ;
-    height: 30px;
+    height: 40px;
    
 }
 
@@ -84,7 +84,7 @@ header {
 main {
     margin: 0 auto;
     margin-top: 30px;
-    width: 80%;
+    width: 70%;
 }
 
 .container-card {
@@ -167,6 +167,15 @@ h5 {
     margin-left: 2px;
     text-decoration: line-through;
 }
+
+footer {
+    width: 100%;
+    /*debug*/
+    min-height: 100px;
+    background-color: black;
+    margin-top: 50px;
+}
+
 
 
 
